# Semester-Project

./: .gitignore  Makefile  README.md  plots.py  pyproject.toml  requirements.txt  sprint2 (1) (1).ipynb
modeling/: predict.py
notebooks/: eda.ipynb  sprint2.html
semester-project414/: README.md  __init__.py  dataset.py  features.py
semester-project414/modeling/: train.py
