[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "semester-project414"
version = "0.0.1"
description = "Semeter project for 414"
authors = [
  { name = "Vaish" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "==3.12.4"


[tool.ruff]
line-length = 99
src = ["semester-project414"]
include = ["pyproject.toml", "semester-project414/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["semester-project414"]
force-sort-within-sections = true

